<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">快递帮手</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_price">PriceActivity</string>
    <string name="title_activity_sender_info">SenderInfoActivity</string>
    <string name="C_POST_NOTICE">寄件提醒</string>
    <string name="C_BIND_CARD">绑定银行卡</string>
    <string name="C_ORDER_LIST">订单记录</string>
    <string name="C_PERSONAL_CENTER">个人中心</string>
    <string name="C_SETTINGS">设置</string>
    <string name="disclaimer">&#160;&#160;&#160;&#160;因航班延误、航班取消、节假日（包括周六日派件）、自然灾害、客户原因、政府行为、交通堵塞等不可抗原因导致的时效延误我公司将不承担赔偿责任</string>
    <string name="C_PHOTO">头像</string>
    <string name="C_NAME">名字</string>
    <string name="C_PHONE">电话</string>
    <string name="C_QR">二维码</string>
    <string name="C_ADDRESS">我的地址</string>
    <string name="C_HINT_LOGIN_USER">请输入手机号</string>
    <string name="C_HINT_REGIST_USER">请输入手机号</string>
    <string name="C_HINT_FORGET_USER">请新输入手机号</string>
    <string name="C_HINT_LOGIN_PW">请输入密码</string>
    <string name="C_HINT_REGIST_PW">输入密码</string>
    <string name="C_HINT_REGIST_PW_AGAIN">再次确认密码</string>
    <string name="C_LOGIN">登录</string>
    <string name="C_REGIST">注册</string>
    <string name="C_FORGET_PW">忘记密码</string>
    <string name="C_REGIST_PW_AGAIN_TIP">再次密码输入不正确！！！</string>
    <string name="C_HINT_AUTHOR_CODE">输入验证码</string>
    <string name="C_GET_AUTHOR_CODE">获取验证码</string>
    <string name="C_NEW_PW">新密码</string>
    <string name="C_COMMIT">提交</string>
    <string name="C_RESET_PW">重置密码</string>
    <string name="C_TACK_PHOTO">拍照</string>
    <string name="C_SELECT_IMAGE">从手机相册选择</string>
    <string name="C_CANCEL">取消</string>
    <string name="C_SAVE">保存</string>
    <string name="C_NET_ERROR">请检查网络</string>
    <string name="C_NO_SDCARD">SD故障，请检查</string>
    <string name="C_NAME_TIP">请输入名字</string>
    <string name="C_ADDRESS_TIP">请输入地址</string>
    <string name="title_activity_add_common">添加常用语</string>
    <string name="title_activity_history_list">MainActivity</string>
    <string name="title_activity_history_item">history_item</string>
    <string name="title_activity_history_detail">MainActivity</string>
    <string name="title_activity_sender_list">MainActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_home2">Home2Activity</string>
    <string name="title_activity_home_personal_fragment">HomePersonalFragment</string>
    <string name="title_activity_home_index_fragment">HomeIndexFragment</string>
    <string name="title_activity_tools">ToolsActivity</string>
    <string name="title_activity_receive_mail">MainActivity</string>
    <string name="title_activity_receive_item">MainActivity</string>
    <string name="receive_msg_content"><Data>您的邮件正在派送中预计2小时之内到达，请注意签收！</Data></string>
    <string name="title_activity_send_message">MainActivity</string>
    <string name="title_activity_senderinfo_addr_detail">MainActivity</string>
    <string name="title_activity_mail_detail">MailDetailActivity</string>
    <string name="title_activity_spiner">SpinerActivity</string>
    <string name="title_activity_my_jifen">MyJifenActivity</string>
    <string name="title_activity_youhuiquan_list">YouhuiquanListActivity</string>
    <string name="C_HINT_PRINT_INVITED_PHONENUMBER">请输入受邀请的手机号</string>
    <string name="C_REGIST_EXPLAIN">说明：受邀请的手机号必须为注册的手机号</string>
    <string name="app_tip">提示</string>
    <string name="getting_prepayid">正在跳转请等待</string>
    <string name="pay_result_callback_msg">返回的结果</string>

</resources>
